--- a/styles.css
+++ b/styles.css
@@ -1387,7 +1387,7 @@ main.row {
   .container {
     max-width: 500px;
     width: 100%;
-    padding: 0 15px 300px;
+    padding: 0 20px 300px;
   }
 
   main.row {
@@ -1448,5 +1448,663 @@ main.row {
     line-height: 25px;
     color: #1c1c1c;
     font-size: 16px;
+  }
+}
+
+/* --------------------- Circle Design For Footer ----------------------*/
+
+.CircleDesign2 {
+  position: absolute;
+  width: 100%;
+  top: 3000px;
+}
+
+.Ellipse1 {
+  width: 134px;
+  height: 134px;
+  left: -50px;
+  top: 147px;
+  position: absolute;
+  background: #ff5f1f;
+  box-shadow: 0px 4px 30px 6px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse2 {
+  width: 158px;
+  height: 158px;
+  left: 25px;
+  top: 100px;
+  position: absolute;
+  background: #2c2b2b;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse3 {
+  width: 289px;
+  height: 289px;
+  left: 139px;
+  top: 55px;
+  position: absolute;
+  background: #ff5f1f;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse4 {
+  width: 162px;
+  height: 162px;
+  left: 367px;
+  top: 55px;
+  position: absolute;
+  background: white;
+  box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse5 {
+  width: 160px;
+  height: 160px;
+  left: 400px;
+  top: 136px;
+  position: absolute;
+  background: #ff5f1f;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse6 {
+  width: 374px;
+  height: 374px;
+  left: 500px;
+  top: 20px;
+  position: absolute;
+  background: #2c2b2b;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse7 {
+  width: 170px;
+  height: 170px;
+  left: 840px;
+  top: 50px;
+  position: absolute;
+  background: white;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse8 {
+  width: 223px;
+  height: 223px;
+  left: 790px;
+  top: 157px;
+  position: absolute;
+  background: #ff5f1f;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse9 {
+  width: 183px;
+  height: 183px;
+  left: 960px;
+  top: 150px;
+  position: absolute;
+  background: #2c2b2b;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse10 {
+  width: 220px;
+  height: 220px;
+  left: 990px;
+  top: 30px;
+  position: absolute;
+  background: #ff5f1f;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse11 {
+  width: 274px;
+  height: 274px;
+  left: 1100px;
+  top: 70px;
+  position: absolute;
+  background: #2c2b2b;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse12 {
+  width: 160px;
+  height: 160px;
+  left: 1215px;
+  top: 225px;
+  position: absolute;
+  background: white;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse13 {
+  width: 321px;
+  height: 321px;
+  left: 1320px;
+  top: 53px;
+  position: absolute;
+  background: #ff5f1f;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse14 {
+  width: 231px;
+  height: 240px;
+  left: 1550px;
+  top: 110px;
+  position: absolute;
+  background: #2c2b2b;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse15 {
+  width: 140px;
+  height: 140px;
+  left: 1563px;
+  top: 60px;
+  position: absolute;
+  background: white;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse16 {
+  width: 250px;
+  height: 250px;
+  left: 1680px;
+  top: 30px;
+  position: absolute;
+  background: #ff5f1f;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+.Ellipse17 {
+  width: 206px;
+  height: 206px;
+  left: 1750px;
+  top: 188px;
+  position: absolute;
+  background: #2c2b2b;
+  box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 9999px;
+}
+
+@media (max-width: 1400px) {
+  .CircleDesign2 {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    top: 2950px;
+    z-index: 1;
+  }
+
+  .Ellipse1 {
+    width: 134px;
+    height: 134px;
+    left: -60px;
+    top: 157px;
+    position: absolute;
+    background: #ff5f1f;
+    box-shadow: 0px 4px 30px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse2 {
+    width: 158px;
+    height: 158px;
+    left: 0px;
+    top: 100px;
+    position: absolute;
+    background: #2c2b2b;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse3 {
+    width: 250px;
+    height: 250px;
+    left: 119px;
+    top: 80px;
+    position: absolute;
+    background: #ff5f1f;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse4 {
+    width: 122px;
+    height: 122px;
+    left: 90px;
+    top: 65px;
+    z-index: -1;
+    position: absolute;
+    background: white;
+    box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse5 {
+    width: 160px;
+    height: 160px;
+    left: 300px;
+    top: 25px;
+    width: 1;
+    position: relative;
+    background: #2c2b2b;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse6 {
+    width: 374px;
+    height: 374px;
+    left: 300px;
+    top: 20px;
+    z-index: -1;
+    position: absolute;
+    background: #2c2b2b;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse7 {
+    width: 170px;
+    height: 170px;
+    left: 600px;
+    top: 50px;
+    position: absolute;
+    background: white;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse8 {
+    width: 223px;
+    height: 223px;
+    left: 620px;
+    top: 157px;
+    position: absolute;
+    background: #ff5f1f;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse9 {
+    width: 183px;
+    height: 183px;
+    left: 740px;
+    top: 70px;
+    position: absolute;
+    background: #2c2b2b;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse10 {
+    width: 220px;
+    height: 220px;
+    left: 890px;
+    top: 30px;
+    position: absolute;
+    background: #ff5f1f;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse11 {
+    width: 274px;
+    height: 274px;
+    left: 800px;
+    top: 100px;
+    z-index: -1;
+    position: absolute;
+    background: #2c2b2b;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse12 {
+    width: 160px;
+    height: 160px;
+    left: 1000px;
+    top: 190px;
+    position: absolute;
+    background: white;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse13 {
+    width: 321px;
+    height: 321px;
+    left: 1100px;
+    top: -100px;
+    z-index: -1;
+    position: relative;
+    background: #ff5f1f;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse14 {
+    width: 231px;
+    height: 240px;
+    left: 1030px;
+    top: 20px;
+    z-index: -1;
+    position: absolute;
+    background: #2c2b2b;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+  .Ellipse15 {
+    display: none;
+  }
+
+  .Ellipse16 {
+    display: none;
+  }
+
+  .Ellipse17 {
+    display: none;
+  }
+}
+
+@media (max-width: 1100px) {
+  .CircleDesign2 {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    top: 2900px;
+    z-index: 1;
+  }
+}
+
+@media (max-width: 500px) {
+  .CircleDesign2 {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 50vh;
+    top: 3900px;
+    z-index: 1;
+  }
+
+  .Ellipse1 {
+    width: 134px;
+    height: 134px;
+    left: -60px;
+    top: 157px;
+    position: absolute;
+    background: #ff5f1f;
+    box-shadow: 0px 4px 30px 6px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse2 {
+    width: 158px;
+    height: 158px;
+    left: 0px;
+    top: 100px;
+    position: absolute;
+    background: #2c2b2b;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse3 {
+    width: 250px;
+    height: 250px;
+    left: 119px;
+    top: 80px;
+    position: absolute;
+    background: #ff5f1f;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse4 {
+    width: 122px;
+    height: 122px;
+    left: 90px;
+    top: 65px;
+    z-index: -1;
+    position: absolute;
+    background: white;
+    box-shadow: 0px 4px 5px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse5 {
+    width: 160px;
+    height: 160px;
+    left: 320px;
+    top: 116px;
+    width: 1;
+    position: relative;
+    background: #2c2b2b;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse6 {
+    display: none;
+  }
+
+  .Ellipse7 {
+    width: 170px;
+    height: 170px;
+    left: 280px;
+    z-index: -2;
+    top: 50px;
+    position: absolute;
+    background: white;
+    box-shadow: 0px 4px 4px 5px rgba(0, 0, 0, 0.25);
+    border-radius: 9999px;
+  }
+
+  .Ellipse8 {
+    display: none;
+  }
+
+  .Ellipse9 {
+    display: none;
+  }
+
+  .Ellipse10 {
+    display: none;
+  }
+
+  .Ellipse11 {
+    display: none;
+  }
+
+  .Ellipse12 {
+    display: none;
+  }
+
+  .Ellipse13 {
+    display: none;
+  }
+
+  .Ellipse14 {
+    display: none;
+  }
+
+  .Ellipse15 {
+    display: none;
+  }
+
+  .Ellipse16 {
+    display: none;
+  }
+
+  .Ellipse17 {
+    display: none;
+  }
+}
+
+footer {
+  background-color: #1c1c1c;
+}
+
+.footerContainer {
+  width: 100%;
+  padding: 250px 30px 20px;
+}
+
+.socialIcons {
+  display: flex;
+  justify-content: center;
+}
+
+.socialIcons li a {
+  color: #ffffff;
+  margin: 10px;
+  font-size: 40px;
+  opacity: 0.5;
+  transition: 0.3s;
+}
+
+.socialIcons li a:hover {
+  opacity: 1;
+}
+
+.footerNav {
+  margin: 30px 0;
+}
+
+.footerNav ul {
+  display: flex;
+  justify-content: center;
+}
+
+.footerNav ul li a {
+  color: #ffffff;
+  margin: 20px;
+  font-size: 20px;
+  opacity: 0.5;
+  transition: 0.3s;
+}
+
+.footerNav ul li a:hover {
+  opacity: 1;
+}
+
+.footerBottom {
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+}
+
+.footerBottom p {
+  color: #ffffff;
+}
+
+.footerBottom a {
+  color: #ffffff;
+  opacity: 0.5;
+  transition: 0.3s;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 500;
+  margin: 0px 5px;
+}
+
+.footerBottom a:hover {
+  opacity: 1;
+}
+
+@media (max-width: 1000px) {
+  .footerNav ul {
+    flex-direction: column;
+  }
+
+  .footerNav ul li {
+    width: 100%;
+    text-align: center;
+    margin: 10px;
+  }
+
+  .footerNav ul li a {
+    opacity: 1;
+  }
+
+  .footerBottom a {
+    opacity: 1;
+  }
+}
+
+@media (max-width: 500px) {
+  footer {
+    background-color: #1c1c1c;
+    margin-top: -30px;
+  }
+  .socialIcons {
+    display: flex;
+    padding-left: 20px;
+    justify-content: center;
+  }
+
+  .socialIcons li a {
+    color: #ffffff;
+    margin: 10px;
+    font-size: 40px;
+    opacity: 1;
+    transition: 0.3s;
+  }
+
+  .footerNav {
+    margin: 30px 0;
+  }
+
+  .footerNav ul {
+    display: flex;
+    justify-content: center;
+  }
+
+  .footerNav ul li a {
+    color: #ffffff;
+    margin: 0px;
+    font-size: 20px;
+    opacity: 1;
+    transition: 0.3s;
+  }
+
+  .footerNav ul li a:hover {
+    opacity: 1;
+  }
+
+  .footerBottom p {
+    color: #ffffff;
+    font-size: 16px;
+  }
+
+  .footerBottom a {
+    color: #ffffff;
+    opacity: 1;
+    transition: 0.3s;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-weight: 400;
+    margin: 0px 5px;
   }
 }
